wrap text fixed

--- a/styles/small.css
+++ b/styles/small.css
@@ -68,7 +68,7 @@
         padding: .15rem;
         font-weight: 700;
         font-size: 8px;
-        text-wrap: nowrap;
+        
     }
 
     .google-map{
